--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://davidjohnbaker.rbind.io/" 
+baseurl = "https://davidjohnbaker1.rbind.io/" 
 title = "David John Baker"
 copyright = "&copy; 2017 David John Baker"
 theme = "hugo-academic"
