--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ defaultContentLanguageInSubdir = false
   organization = "Louisiana State University"
   organization_url = ""
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "smalldavidheadshot.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  avatar = "davidocean.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "davidjohnbaker1@gmail.com"
   address = "Music & Dramatic Arts Building, 191 Dalrymple Dr, Baton Rouge, LA 70802"
   office_hours = "Monday and Wednesday 12:00 to 13:00 or by appointment in Audubon 109 or MDA B6"
