--- a/config.toml
+++ b/config.toml
@@ -20,8 +20,8 @@ defaultContentLanguageInSubdir = false
 
 [params]
   name = "David John Baker"
-  role = "PhD Candidate, Music Cognition and Computation Lab"
-  organization = "Louisiana State University"
+  role = "Music, Theory, Science"
+  organization = ""
   organization_url = ""
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "davidocean.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
