--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -86,21 +86,21 @@ phone = "+1 414 736 7948"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "131 Finsbury Pavement", city = "London", region = "", postcode = "EC2A 1NT", country = "United Kingdom", country_code = "UK"}
+# address = {street = "131 Finsbury Pavement", city = "London", region = "", postcode = "EC2A 1NT", country = "United Kingdom", country_code = "UK"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
 # coordinates = {latitude = "37.4275", longitude = "-122.1697"}
 
 # Directions for visitors to locate you.
-directions = "  Enter Building 1 and take the stairs to Office 200 on Floor 2"
+# directions = "  Enter Building 1 and take the stairs to Office 200 on Floor 2"
 
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
-office_hours = ["Monday 9:00 to 18:00"]
+# office_hours = ["Monday 9:00 to 18:00"]
 
 # Enter an optional link for booking appointments (e.g. calendly.com).
-appointment_url = "https://calendly.com"
+# appointment_url = "https://calendly.com"
 
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
